--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,6 +1,25 @@
+body {
+	background-image: url("../images/darkedges.png");
+	color: white;
+}
+
+.wrapper {
+	width: 980px;
+	margin: 0 auto;
+	text-align: center;
+}
+
+h1 {
+	font-size: 50px;
+}
+
 img {
 	width: 100px;
 	height: 100px;
+}
+
+img:hover {
+	box-shadow: 0px 5px 5px 0px black;
 }
 
 #match-this {
